<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4F4C4C"
    tools:context=".FirstPageActivity">

    <View
        android:id="@+id/basemant"
        android:layout_width="wrap_content"
        android:layout_height="386dp"
        android:background="@drawable/basemant_border"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/LoginButton"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/login"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BasemantTextView" />

    <View
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="@drawable/header_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="57dp"
        android:layout_height="56dp"
        android:contentDescription="@string/logo"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/TextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/jira_family"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/Logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BasemantTextView"
        android:layout_width="248dp"
        android:layout_height="101dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/text_for_basemant"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/basemant" />

    <Button
        android:id="@+id/RegistrationButton"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <Button
        android:id="@+id/TokenButton"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:text="Администрация"
        android:backgroundTint="@color/yellow"
        android:textSize="18sp"
        android:visibility="visible"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>