<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ProfileActivity">

    <View
        android:id="@+id/basemant"
        android:layout_width="417dp"
        android:layout_height="430dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/basemant_border"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="390dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/login"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/basemant" />


    <Button
        android:layout_width="390dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/login"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TokenButton" />

    <View
        android:id="@+id/header"
        android:layout_width="413dp"
        android:layout_height="45dp"
        android:background="@drawable/header_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/TextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/jira_family"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/Logo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RegistrationButton"
        android:layout_width="390dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <Button
        android:id="@+id/TokenButton"
        android:layout_width="390dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/input_token"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@drawable/add" />

    <View
        android:id="@+id/view"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rounded_yellow_view"
        app:layout_constraintBottom_toTopOf="@+id/basemant"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Имя"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:id="@+id/view2"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rounded_yellow_view"
        app:layout_constraintBottom_toTopOf="@+id/basemant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Фамилия"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="417dp"
        android:layout_height="56dp"
        android:background="@drawable/yellow_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basemant"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toEndOf="@+id/view4"
        app:srcCompat="@drawable/account_circle_2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view5"
        app:srcCompat="@drawable/circle_notifications" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view6"
        app:srcCompat="@drawable/vector" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:srcCompat="@drawable/assessment" />

    <View
        android:id="@+id/view4"
        android:layout_width="1dp"
        android:layout_height="28dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="12dp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5" />

    <View
        android:id="@+id/view6"
        android:layout_width="1dp"
        android:layout_height="28dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="12dp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7" />

    <View
        android:id="@+id/view5"
        android:layout_width="1dp"
        android:layout_height="28dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="12dp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6" />


</androidx.constraintlayout.widget.ConstraintLayout>